<resources>
    <string name="app_name">Quiz App</string>
    <string name="question1_number">1.</string>
    <string name="question1">Which of the following is a programming language</string>
    <string name="option_a_question1">Java</string>
    <string name="option_b_question1">XML</string>
    <string name="option_c_question1">CSS</string>
    <string name="option_d_question1">Eclipse</string>

    <string name="question2_number">2.</string>
    <string name="question2">Which of the following is not an Android version.</string>
    <string name="option_a_question2">Marshmallow</string>
    <string name="option_b_question2">Lollipop</string>
    <string name="option_c_question2">Alpha</string>
    <string name="option_d_question2">Gingerbread</string>

    <string name="question3_number">3.</string>
    <string name="question3">Which mobile operating system has the largest market share for smartphones ?</string>
    <string name="option_a_question3">Windows</string>
    <string name="option_b_question3">IOS</string>
    <string name="option_c_question3">Blackberry</string>
    <string name="option_d_question3">Android</string>

    <string name="question4_number">4. </string>
    <string name="question4">Which of the following is/are web development technologies.</string>
    <string name="option_a_question4">AJAX</string>
    <string name="option_b_question4">HTML5</string>
    <string name="option_c_question4">Switch</string>
    <string name="option_d_question4">django</string>

    <string name="question5_number">5. </string>
    <string name="question5">Which of the following is/are web browsers .</string>
    <string name="option_a_question5">Firefox</string>
    <string name="option_b_question5">Chrome</string>
    <string name="option_c_question5">Visual Studio</string>
    <string name="option_d_question5">Youtube</string>

    <string name="question6_number">6. </string>
    <string name="question6">Which company owns android.</string>
    <string name="answer_question6">google</string>
    <string name="hint">Type your answer here</string>

    <string name="mark_quiz">GRADE QUIZ</string>
</resources>
